# library-api/src/models/Author.js
@@ -3,22 +3,46 @@ const mongoose = require('mongoose');
 const authorSchema = new mongoose.Schema({
   name: {
     type: String,
-    required: [true, 'Imię i nazwisko jest wymagane'],
+    required: true,
     trim: true
   },
   biography: {
     type: String,
     trim: true
   },
-  birthYear: {
-    type: Number
+  birthDate: {
+    type: Date
   },
   nationality: {
     type: String,
     trim: true
+  },
+  books: [{
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Book'
+  }],
+  createdAt: {
+    type: Date,
+    default: Date.now
+  },
+  updatedAt: {
+    type: Date,
+    default: Date.now
   }
 }, {
-  timestamps: true
+  timestamps: true,
+  toJSON: {
+    virtuals: true,
+    transform: function(doc, ret) {
+      ret.id = ret._id;
+      delete ret._id;
+      delete ret.__v;
+      return ret;
+    }
+  }
 });
 
-module.exports = mongoose.model('Author', authorSchema); 
+
+const Author = mongoose.model('Author', authorSchema);
+
+module.exports = Author; 
